--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "propuesta-abn---ues21",
-  "homepage": "https://sebastian694.github.io/Propuesta-UES21/",
+  "homepage": "https://sebastian694.github.io/Propuesta-UES21",
   "private": true,
   "version": "0.0.0",
   "type": "module",
