--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
   "name": "propuesta-abn---ues21",
-  "homepage": "https://sebastian694.github.io/Propuesta-UES21",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "lucide-react": "^0.555.0",
+    "vite": "^7.2.6",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "gh-pages": "^6.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
